footer alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -553,6 +553,11 @@ body{
         margin: 10px 0 0;
         font-size: 18px;
     }
+    .footer_elems{
+        flex-direction: column;
+        align-items: center;
+        gap: 15px 0;
+    }
 }
 
 @media only screen and (max-width: 410px){
